fix(sonar): fix more MAJOR and MINOR code smells